Implement binary checksum rotation